--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/dataname?serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+mybatis.config-location=classpath:mybatis/mybatis-config.xml  #\u653E\u5728resources/mybatis/mybatis-config.xml\u4E2D
+mybatis.mapper-locations= classpath:mybatis/mapper/*.xml
+mybatis.type-aliases-package=com.form.model #\u7C7B\u578B\u8F6C\u6362\u5668\u5305\uFF0C\u591A\u4E2A\u9017\u53F7\u9694\u5F00
+
+
+spring.redis.host=127.0.0.1
+spring.redis.port=20
+spring.redis.password=33
+spring.redis.timeout=11
+
+banner.location=xxx.txt  #\u53EF\u4EE5\u81EA\u5B9A\u4E49\u8F93\u51FA\u4FE1\u606F\u7684\u4F4D\u7F6E
+banner.charset=utf-  #\u6307\u5B9A\u7F16\u7801\u683C\u5F0F
